docs: Corrigir descrição do S3 na página de serviços

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,6 @@
-# Configurações do servidor
+# Exemplo de arquivo .env - Renomeie para .env e preencha com suas credenciais
+AWS_ACCESS_KEY=sua_access_key_aqui
+AWS_SECRET_KEY=sua_secret_key_aqui
+
 PORT=8000
 NODE_ENV=development
-
-# Credenciais AWS (opcional, normalmente fornecidas pelo frontend)
-# AWS_ACCESS_KEY=
-# AWS_SECRET_KEY=
