--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,68 @@
-# Arquivos de ambiente e configuração
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Dependências
-node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-
-# Arquivos de build
+# Next.js
 .next/
-dist/
-build/
 out/
+build/
 
-# Arquivos de download temporários
-backend/downloads/*
-!backend/downloads/.gitkeep
-backend/uploads/*
-!backend/uploads/.gitkeep
+# Production
+dist/
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
 # Logs
 logs
 *.log
 
-# Arquivos do sistema operacional
+# Coverage directory used by tools like istanbul
+coverage/
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
 .DS_Store
 Thumbs.db
-desktop.ini
 
-# Arquivos de IDE
-.idea/
-.vscode/
-*.sublime-project
-*.sublime-workspace
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Arquivos de teste
-coverage/
-.nyc_output/
-test-*.js
-debug-*.js
-**/test-auth.json
-
-# Arquivos temporários
-*.tmp
-*.temp
-*.bak
-*.cache
+# Temporary folders
+tmp/
+temp/
