--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,9 @@
     "node-fetch": "^2.6.7"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "serverless-domain-manager": "^8.0.0",
+    "serverless-http": "^3.2.0",
+    "serverless-offline": "^14.4.0"
   }
 }
