--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,13 @@
-# Exemplo de arquivo .env - Renomeie para .env e preencha com suas credenciais
+# AWS Credentials (não commitar valores reais)
 AWS_ACCESS_KEY=sua_access_key_aqui
 AWS_SECRET_KEY=sua_secret_key_aqui
 
+# Server Configuration
 PORT=8000
 NODE_ENV=development
+
+# AWS Region
+AWS_REGION=us-east-1
+
+# Stage (para serverless)
+STAGE=dev
