--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -19,11 +19,7 @@ functions:
           path: /{proxy+}
           method: ANY
           cors:
-            origin: 
-              - https://aws-services.com
-              - https://test.aws-services.com
-              - https://dev.aws-services.com
-              - http://localhost:3000
+            origin: '*'
             headers:
               - Content-Type
               - Authorization
@@ -31,17 +27,17 @@ functions:
               - secret_key
             allowCredentials: true
 
-custom:
-  customDomain:
-    domainName: api-${self:provider.stage}.aws-services.com
-    basePath: ''
-    stage: ${self:provider.stage}
-    createRoute53Record: true
-    certificateName: '*.aws-services.com'
-    hostedZoneId: ${env:HOSTED_ZONE_ID}
+# custom:
+#   customDomain:
+#     domainName: api-${self:provider.stage}.aws-services.com
+#     basePath: ''
+#     stage: ${self:provider.stage}
+#     createRoute53Record: true
+#     certificateName: '*.aws-services.com'
+#     hostedZoneId: ${env:HOSTED_ZONE_ID}
 
 plugins:
-  - serverless-domain-manager
+  # - serverless-domain-manager
   - serverless-offline
 
 package:
