--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,9 +2,9 @@ name: AWS Services CI/CD Pipeline
 
 on:
   push:
-    branches: [main]
+    branches: [dev, test, main]
   pull_request:
-    branches: [main]
+    branches: [dev, test, main]
 
 env:
   NODE_VERSION: '18'
@@ -70,6 +70,120 @@ jobs:
           npm install
           npm run build
 
+  # ==================== DEPLOY DEVELOPMENT ====================
+  deploy-dev:
+    name: Deploy to Development
+    runs-on: ubuntu-latest
+    needs: [test, build]
+    if: github.ref == 'refs/heads/dev' && github.event_name == 'push'
+    environment: development
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Deploy Backend (Lambda)
+        run: |
+          cd backend
+          npm install
+          npm install -g serverless
+          export HOSTED_ZONE_ID=${{ secrets.HOSTED_ZONE_ID }}
+          sls deploy --stage dev
+
+      - name: Build Frontend
+        run: |
+          cd frontend-next
+          npm install
+          npm run build
+          npm run export
+
+      - name: Deploy Frontend (S3)
+        run: |
+          aws s3 sync frontend-next/out/ s3://aws-services-dashboard-dev --delete
+
+      - name: Invalidate CloudFront
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID_DEV }} \
+            --paths "/*"
+
+      - name: Deployment Summary
+        run: |
+          echo "📊 Deployment Summary:"
+          echo "- Environment: Development"
+          echo "- Frontend: S3 + CloudFront"
+          echo "- Backend: Lambda + API Gateway"
+          echo "- Commit: ${{ github.sha }}"
+          echo "- Status: Success ✅"
+
+  # ==================== DEPLOY TEST ====================
+  deploy-test:
+    name: Deploy to Test
+    runs-on: ubuntu-latest
+    needs: [test, build]
+    if: github.ref == 'refs/heads/test' && github.event_name == 'push'
+    environment: test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Deploy Backend (Lambda)
+        run: |
+          cd backend
+          npm install
+          npm install -g serverless
+          export HOSTED_ZONE_ID=${{ secrets.HOSTED_ZONE_ID }}
+          sls deploy --stage test
+
+      - name: Build Frontend
+        run: |
+          cd frontend-next
+          npm install
+          npm run build
+          npm run export
+
+      - name: Deploy Frontend (S3)
+        run: |
+          aws s3 sync frontend-next/out/ s3://aws-services-dashboard-test --delete
+
+      - name: Invalidate CloudFront
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID_TEST }} \
+            --paths "/*"
+
+      - name: Deployment Summary
+        run: |
+          echo "📊 Deployment Summary:"
+          echo "- Environment: Test"
+          echo "- Frontend: S3 + CloudFront"
+          echo "- Backend: Lambda + API Gateway"
+          echo "- Commit: ${{ github.sha }}"
+          echo "- Status: Success ✅"
+
   # ==================== DEPLOY PRODUCTION ====================
   deploy-prod:
     name: Deploy to Production
@@ -81,6 +195,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -88,25 +207,36 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Deploy Backend (Serverless)
+      - name: Deploy Backend (Lambda)
         run: |
           cd backend
           npm install
           npm install -g serverless
-          echo "🚀 Backend deployment simulated"
+          export HOSTED_ZONE_ID=${{ secrets.HOSTED_ZONE_ID }}
+          sls deploy --stage prod
 
-      - name: Deploy Frontend (S3)
+      - name: Build Frontend
         run: |
           cd frontend-next
           npm install
           npm run build
-          echo "🚀 Frontend deployment simulated"
+          npm run export
+
+      - name: Deploy Frontend (S3)
+        run: |
+          aws s3 sync frontend-next/out/ s3://aws-services-dashboard-prod --delete
+
+      - name: Invalidate CloudFront
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id E3FUU8LKMW773I \
+            --paths "/*"
 
       - name: Deployment Summary
         run: |
           echo "📊 Deployment Summary:"
           echo "- Environment: Production"
+          echo "- Frontend: S3 + CloudFront"
+          echo "- Backend: Lambda + API Gateway"
           echo "- Commit: ${{ github.sha }}"
-          echo "- Branch: ${{ github.ref_name }}"
-          echo "- AWS Region: ${{ env.AWS_REGION }}"
           echo "- Status: Success ✅"
