--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Production builds
+.next/
+out/
+dist/
+build/
+
 # Environment variables
 .env
 .env.local
@@ -11,47 +17,22 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
-# Next.js
-.next/
-out/
-build/
+# AWS
+.aws/
+.serverless/
 
-# Production
-dist/
+# Logs
+logs/
+*.log
 
 # Runtime data
-pids
+pids/
 *.pid
 *.seed
 *.pid.lock
 
-# Logs
-logs
-*.log
-
 # Coverage directory used by tools like istanbul
 coverage/
-
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
 
 # IDE
 .vscode/
@@ -63,6 +44,9 @@ jspm_packages/
 .DS_Store
 Thumbs.db
 
-# Temporary folders
-tmp/
-temp/
+# Temporary files
+*.tmp
+*.temp
+dns-config.txt
+bucket-policy.json
+validation-record.json
