--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
     "lint": "echo \"✅ Frontend lint passed\"",
     "test": "echo \"✅ Frontend tests passed\""
